# smollest

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_openai.py  demo_dashboard.py
examples/mock/: seed_basic.py  seed_secondary_metrics.py  seed_traces.py
examples/real/: anthropic_autocompare_messages.py  anthropic_wrapper_basic.py  openai_autocompare_chat.py  openai_autocompare_responses.py  openai_secondary_metrics.py  openai_wrapper_basic.py
mvlm/: anthropic.py  cli.py  openai.py  package.json  results.py  web.py
smollest/: __init__.py  anthropic.py  defaults.py  engine.py  metrics.py  openai.py  package.json  results.py  web.py
tests/: conftest.py  test_ui_playwright.py  test_web_api.py  test_wrapper.py
